src/test/ui/wf/wf-trait-fn-where-clause.stderr
error[E0277]: the trait bound `Self: std::cmp::Eq` is not satisfied
  --> $DIR/wf-trait-fn-where-clause.rs:10:49
   |
LL | struct Bar<T:Eq+?Sized> { value: Box<T> }
   | ----------------------- required by `Bar`
...
LL |     fn bar(&self) where Self: Sized, Bar<Self>: Copy;
   |                                                 ^^^^- help: consider further restricting `Self`: `, Self: std::cmp::Eq`
   |                                                 |
   |                                                 the trait `std::cmp::Eq` is not implemented for `Self`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
